# pdfAcroformNormalization

./: CMakeLists.txt  Dockerfile  LICENSE  checkBox_AP_off.txt  checkBox_AP_off_D.txt  dockerCMakeLists.txt  main.cpp  radioButton_AP_no.txt  radioButton_AP_off.txt  webApp.py
